# quintses

./: CMakeLists.txt  COPYING  Doxyfile.in  qntcli.cpp  qntsrv.cpp  quintses.cpp  quintses.kdev4
client/: CMakeLists.txt  localclient.cpp  localclient.hpp  localclient_x11.cpp  platformdata_x11.hpp  remoteserver.cpp  remoteserver.hpp
client/openal/: alaudio.cpp  alaudio.hpp  streamingfile.cpp  streamingfile.hpp  streamingwav.cpp  streamingwav.hpp
client/opengl/: glloader.cpp  glloader.hpp  glloader_x11.cpp  glrender.cpp  glrender.hpp
core/: CMakeLists.txt  audioiface.hpp  clientiface.hpp  iface_vtable.cpp  loaderiface.hpp  physicsiface.hpp  renderiface.hpp  serveriface.hpp
core/messages/client/: clientaddobjectmsg.cpp  clientaddobjectmsg.hpp  clientdelobjectmsg.cpp  clientdelobjectmsg.hpp  clientmsg.cpp  clientmsg.hpp  clienttransobjectmsg.cpp  clienttransobjectmsg.hpp
core/messages/server/: inputmsg.cpp  inputmsg.hpp  loadplayermsg.cpp  loadplayermsg.hpp  servermessage.cpp  servermessage.hpp  servermsg.cpp  servermsg.hpp  shutdownmsg.cpp  shutdownmsg.hpp
core/util/: atomic.hpp  math.hpp  queue.hpp  socket.hpp  streamhelpers.hpp  xml.hpp  xml_helpers.hpp
data/: world.xml
server/: CMakeLists.txt  localserver.cpp  localserver.hpp  remoteclient.cpp  remoteclient.hpp
server/bullet/: btphysics.cpp  btphysics.hpp
